beryllium: Specify device has a notch
Change-Id: Ib912728020f85c820b10d5102365dc37f9a54342
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Signed-off-by: MadeOfGreat <ravenklawasd@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -222,4 +222,7 @@
 
     <!-- Whether to show HD icon in the status bar for volte -->
     <bool name="config_display_hd_volte">false</bool>
+
+    <!-- Whether device has a notch -->
+    <bool name="config_haveNotch">true</bool>
 </resources>
